chore: run spotlessApply
Signed-off-by: Victor Yanev <victor.yanev@limechain.tech>