@@ -241,14 +241,17 @@ class OpcodesControllerTest {
         when(transactionRepository.findByPayerAccountIdAndValidStartNs(payerAccountId, validStartNs))
                 .thenReturn(Optional.of(transaction));
         when(ethereumTransactionRepository.findByConsensusTimestampAndPayerAccountId(
-                contractTransactionHash.getConsensusTimestamp(),
-                EntityId.of(contractTransactionHash.getPayerAccountId())
-        )).thenReturn(Optional.ofNullable(ethTransaction));
+                        contractTransactionHash.getConsensusTimestamp(),
+                        EntityId.of(contractTransactionHash.getPayerAccountId())))
+                .thenReturn(Optional.ofNullable(ethTransaction));
         when(contractResultRepository.findById(consensusTimestamp)).thenReturn(Optional.of(contractResult));
         when(recordFileRepository.findByTimestamp(consensusTimestamp)).thenReturn(Optional.of(recordFile));
-        when(entityDatabaseAccessor.evmAddressFromId(contractId, Optional.empty())).thenReturn(contractAddress);
-        when(entityDatabaseAccessor.evmAddressFromId(senderId, Optional.empty())).thenReturn(senderAddress);
-        when(entityDatabaseAccessor.get(contractAddress, Optional.empty())).thenReturn(Optional.ofNullable(contractEntity));
+        when(entityDatabaseAccessor.evmAddressFromId(contractId, Optional.empty()))
+                .thenReturn(contractAddress);
+        when(entityDatabaseAccessor.evmAddressFromId(senderId, Optional.empty()))
+                .thenReturn(senderAddress);
+        when(entityDatabaseAccessor.get(contractAddress, Optional.empty()))
+                .thenReturn(Optional.ofNullable(contractEntity));
         when(entityDatabaseAccessor.get(senderAddress, Optional.empty())).thenReturn(Optional.of(senderEntity));
 
         if (ethTransaction != null) {
@@ -302,8 +305,8 @@ class OpcodesControllerTest {
 
     @ParameterizedTest
     @MethodSource("transactionsWithDifferentTracerOptions")
-    void callWithDifferentCombinationsOfTracerOptions(final TransactionProviderEnum providerEnum,
-                                                      final OpcodeTracerOptions options) throws Exception {
+    void callWithDifferentCombinationsOfTracerOptions(
+            final TransactionProviderEnum providerEnum, final OpcodeTracerOptions options) throws Exception {
         final TransactionIdOrHashParameter transactionIdOrHash = setUp(providerEnum);
 
         mockMvc.perform(opcodesRequest(transactionIdOrHash, options))
@@ -331,21 +334,23 @@ class OpcodesControllerTest {
     void callWithTransactionNotFoundExceptionTest(final TransactionProviderEnum providerEnum) throws Exception {
         final TransactionIdOrHashParameter transactionIdOrHash = setUp(providerEnum);
 
-        final GenericErrorResponse expectedError = switch (transactionIdOrHash) {
-            case TransactionHashParameter parameter -> {
-                reset(contractTransactionHashRepository);
-                when(contractTransactionHashRepository.findByHash(parameter.hash().toArray())).thenReturn(Optional.empty());
-                yield new GenericErrorResponse("Contract transaction hash not found");
-            }
-            case TransactionIdParameter parameter -> {
-                reset(transactionRepository);
-                when(transactionRepository.findByPayerAccountIdAndValidStartNs(
-                        parameter.payerAccountId(),
-                        convertToNanosMax(parameter.validStart())
-                )).thenReturn(Optional.empty());
-                yield new GenericErrorResponse("Transaction not found");
-            }
-        };
+        final GenericErrorResponse expectedError =
+                switch (transactionIdOrHash) {
+                    case TransactionHashParameter parameter -> {
+                        reset(contractTransactionHashRepository);
+                        when(contractTransactionHashRepository.findByHash(
+                                        parameter.hash().toArray()))
+                                .thenReturn(Optional.empty());
+                        yield new GenericErrorResponse("Contract transaction hash not found");
+                    }
+                    case TransactionIdParameter parameter -> {
+                        reset(transactionRepository);
+                        when(transactionRepository.findByPayerAccountIdAndValidStartNs(
+                                        parameter.payerAccountId(), convertToNanosMax(parameter.validStart())))
+                                .thenReturn(Optional.empty());
+                        yield new GenericErrorResponse("Transaction not found");
+                    }
+                };
 
         mockMvc.perform(opcodesRequest(transactionIdOrHash))
                 .andExpect(status().isNotFound())
@@ -354,20 +359,23 @@ class OpcodesControllerTest {
 
     @ParameterizedTest
     @MethodSource("transactionsWithDifferentSenderAddresses")
-    void callWithDifferentSenderAddressShouldUseEvmAddressWhenPossible(final TransactionProviderEnum providerEnum) throws Exception {
+    void callWithDifferentSenderAddressShouldUseEvmAddressWhenPossible(final TransactionProviderEnum providerEnum)
+            throws Exception {
         final TransactionIdOrHashParameter transactionIdOrHash = setUp(providerEnum);
 
         if (transactionIdOrHash instanceof TransactionIdParameter id && id.payerAccountId() == null) {
             mockMvc.perform(opcodesRequest(transactionIdOrHash))
                     .andExpect(status().isBadRequest())
-                    .andExpect(responseBody(new GenericErrorResponse(
-                            "Unsupported ID format: 'null-%d-%d'"
-                                    .formatted(id.validStart().getEpochSecond(), id.validStart().getNano()))));
+                    .andExpect(responseBody(new GenericErrorResponse("Unsupported ID format: 'null-%d-%d'"
+                            .formatted(
+                                    id.validStart().getEpochSecond(),
+                                    id.validStart().getNano()))));
             return;
         }
 
         expectedCallServiceParameters.set(expectedCallServiceParameters.get().toBuilder()
-                .sender(new HederaEvmAccount(entityAddress(providerEnum.getSenderEntity().get())))
+                .sender(new HederaEvmAccount(
+                        entityAddress(providerEnum.getSenderEntity().get())))
                 .build());
 
         mockMvc.perform(opcodesRequest(transactionIdOrHash))
@@ -377,10 +385,10 @@ class OpcodesControllerTest {
         assertThat(callServiceParametersCaptor.getValue()).isEqualTo(expectedCallServiceParameters.get());
     }
 
-
     @ParameterizedTest
     @MethodSource("transactionsWithDifferentReceiverAddresses")
-    void callWithDifferentReceiverAddressShouldUseEvmAddressWhenPossible(final TransactionProviderEnum providerEnum) throws Exception {
+    void callWithDifferentReceiverAddressShouldUseEvmAddressWhenPossible(final TransactionProviderEnum providerEnum)
+            throws Exception {
         final TransactionIdOrHashParameter transactionIdOrHash = setUp(providerEnum);
 
         expectedCallServiceParameters.set(expectedCallServiceParameters.get().toBuilder()
@@ -397,22 +405,22 @@ class OpcodesControllerTest {
     @ParameterizedTest
     @ValueSource(
             strings = {
-                    " ",
-                    "0x",
-                    "0xghijklmno",
-                    "0x00000000000000000000000000000000000004e",
-                    "0x00000000000000000000000000000000000004e2a",
-                    "00000000001239847e",
-                    "0.0.1234-1234567890", // missing nanos
-                    "0.0.1234-0-1234567890", // nanos overflow
-                    "0.0.1234-1-123456789-",  // dash after nanos
+                " ",
+                "0x",
+                "0xghijklmno",
+                "0x00000000000000000000000000000000000004e",
+                "0x00000000000000000000000000000000000004e2a",
+                "00000000001239847e",
+                "0.0.1234-1234567890", // missing nanos
+                "0.0.1234-0-1234567890", // nanos overflow
+                "0.0.1234-1-123456789-", // dash after nanos
             })
     void callInvalidTransactionIdOrHash(final String transactionIdOrHash) throws Exception {
         when(rateLimitBucket.tryConsume(1)).thenReturn(true);
 
-        final var expectedMessage = StringUtils.hasText(transactionIdOrHash) ?
-                "Unsupported ID format: '%s'".formatted(transactionIdOrHash) :
-                "Missing transaction ID or hash";
+        final var expectedMessage = StringUtils.hasText(transactionIdOrHash)
+                ? "Unsupported ID format: '%s'".formatted(transactionIdOrHash)
+                : "Missing transaction ID or hash";
 
         mockMvc.perform(opcodesRequest(transactionIdOrHash))
                 .andExpect(status().isBadRequest())
@@ -427,7 +435,8 @@ class OpcodesControllerTest {
         for (var i = 0; i < 3; i++) {
             mockMvc.perform(opcodesRequest(transactionIdOrHash))
                     .andExpect(status().isOk())
-                    .andExpect(responseBody(Builder.opcodesResponse(opcodesResultCaptor.get(), entityDatabaseAccessor)));
+                    .andExpect(
+                            responseBody(Builder.opcodesResponse(opcodesResultCaptor.get(), entityDatabaseAccessor)));
 
             assertThat(callServiceParametersCaptor.getValue()).isEqualTo(expectedCallServiceParameters.get());
         }
@@ -447,13 +456,14 @@ class OpcodesControllerTest {
     void callSuccessCors(final TransactionProviderEnum providerEnum) throws Exception {
         final TransactionIdOrHashParameter transactionIdOrHash = setUp(providerEnum);
 
-        final String param = switch (transactionIdOrHash) {
-            case TransactionHashParameter hashParameter -> hashParameter.hash().toHexString();
-            case TransactionIdParameter transactionIdParameter -> Builder.transactionIdString(
-                    transactionIdParameter.payerAccountId(),
-                    transactionIdParameter.validStart()
-            );
-        };
+        final String param =
+                switch (transactionIdOrHash) {
+                    case TransactionHashParameter hashParameter -> hashParameter
+                            .hash()
+                            .toHexString();
+                    case TransactionIdParameter transactionIdParameter -> Builder.transactionIdString(
+                            transactionIdParameter.payerAccountId(), transactionIdParameter.validStart());
+                };
 
         mockMvc.perform(options(OPCODES_URI, param)
                         .accept(MediaType.APPLICATION_JSON)
@@ -480,37 +490,37 @@ class OpcodesControllerTest {
     }
 
     static Stream<Arguments> transactionsWithDifferentSenderAddresses() {
-        return Arrays.stream(TransactionProviderEnum.values())
-                .flatMap(providerEnum -> entityAddressCombinations(providerEnum.getPayerAccountId())
-                        .map(pair -> Arguments.of(Named.of(
-                                "%s(payerAccountId=%s, evmAddress=%s, alias=%s)".formatted(
+        return Arrays.stream(TransactionProviderEnum.values()).flatMap(providerEnum -> entityAddressCombinations(
+                        providerEnum.getPayerAccountId())
+                .map(pair -> Arguments.of(Named.of(
+                        "%s(payerAccountId=%s, evmAddress=%s, alias=%s)"
+                                .formatted(
                                         providerEnum.name(),
                                         pair.getLeft() != null ? pair.getLeft().toString() : null,
                                         pair.getMiddle() != null ? Bytes.of(pair.getMiddle()) : null,
                                         pair.getRight() != null ? Bytes.of(pair.getRight()) : null),
-                                providerEnum.customize(p -> {
-                                    p.setPayerAccountId(pair.getLeft());
-                                    p.setPayerEvmAddress(pair.getMiddle());
-                                    p.setPayerAlias(pair.getRight());
-                                })
-                        ))));
+                        providerEnum.customize(p -> {
+                            p.setPayerAccountId(pair.getLeft());
+                            p.setPayerEvmAddress(pair.getMiddle());
+                            p.setPayerAlias(pair.getRight());
+                        })))));
     }
 
     static Stream<Arguments> transactionsWithDifferentReceiverAddresses() {
-        return Arrays.stream(TransactionProviderEnum.values())
-                .flatMap(providerEnum -> entityAddressCombinations(providerEnum.getContractId())
-                        .map(pair -> Arguments.of(Named.of(
-                                "%s(contractId=%s, evmAddress=%s, alias=%s)".formatted(
+        return Arrays.stream(TransactionProviderEnum.values()).flatMap(providerEnum -> entityAddressCombinations(
+                        providerEnum.getContractId())
+                .map(pair -> Arguments.of(Named.of(
+                        "%s(contractId=%s, evmAddress=%s, alias=%s)"
+                                .formatted(
                                         providerEnum.name(),
                                         pair.getLeft() != null ? pair.getLeft().toString() : null,
                                         pair.getMiddle() != null ? Bytes.of(pair.getMiddle()) : null,
                                         pair.getRight() != null ? Bytes.of(pair.getRight()) : null),
-                                providerEnum.customize(p -> {
-                                    p.setContractId(pair.getLeft());
-                                    p.setContractEvmAddress(pair.getMiddle());
-                                    p.setContractAlias(pair.getRight());
-                                })
-                        ))));
+                        providerEnum.customize(p -> {
+                            p.setContractId(pair.getLeft());
+                            p.setContractEvmAddress(pair.getMiddle());
+                            p.setContractAlias(pair.getRight());
+                        })))));
     }
 
     static Stream<Triple<EntityId, byte[], byte[]>> entityAddressCombinations(@Nullable EntityId entityId) {
@@ -542,15 +552,17 @@ class OpcodesControllerTest {
             return "%s-%d-%d".formatted(payerAccountId, validStart.getEpochSecond(), validStart.getNano());
         }
 
-        private static OpcodesResponse opcodesResponse(final OpcodesProcessingResult result,
-                                                       final EntityDatabaseAccessor entityDatabaseAccessor) {
+        private static OpcodesResponse opcodesResponse(
+                final OpcodesProcessingResult result, final EntityDatabaseAccessor entityDatabaseAccessor) {
             return new OpcodesResponse()
-                    .address(result.transactionProcessingResult().getRecipient()
+                    .address(result.transactionProcessingResult()
+                            .getRecipient()
                             .flatMap(address -> entityDatabaseAccessor.get(address, Optional.empty()))
                             .map(TransactionProviderEnum::entityAddress)
                             .map(Address::toHexString)
                             .orElse(Address.ZERO.toHexString()))
-                    .contractId(result.transactionProcessingResult().getRecipient()
+                    .contractId(result.transactionProcessingResult()
+                            .getRecipient()
                             .flatMap(address -> entityDatabaseAccessor.get(address, Optional.empty()))
                             .map(Entity::toEntityId)
                             .map(EntityId::toString)
@@ -576,7 +588,8 @@ class OpcodesControllerTest {
                                                     entry -> entry.getKey().toHexString(),
                                                     entry -> entry.getValue().toHexString()))))
                             .toList())
-                    .returnValue(Optional.ofNullable(result.transactionProcessingResult().getOutput())
+                    .returnValue(Optional.ofNullable(
+                                    result.transactionProcessingResult().getOutput())
                             .map(Bytes::toHexString)
                             .orElse(Bytes.EMPTY.toHexString()));
         }
@@ -585,24 +598,30 @@ class OpcodesControllerTest {
                 final ContractDebugParameters params, final OpcodeTracerOptions options) {
             final Address recipient = params != null ? params.getReceiver() : Address.ZERO;
             final List<Opcode> opcodes = opcodes(options);
-            final long gasUsed = opcodes.stream().map(Opcode::gas).reduce(Long::sum).orElse(0L);
-            final long gasCost = opcodes.stream().map(Opcode::gasCost).reduce(Long::sum).orElse(0L);
+            final long gasUsed =
+                    opcodes.stream().map(Opcode::gas).reduce(Long::sum).orElse(0L);
+            final long gasCost =
+                    opcodes.stream().map(Opcode::gasCost).reduce(Long::sum).orElse(0L);
             return new OpcodesProcessingResult(
-                    HederaEvmTransactionProcessingResult
-                            .successful(List.of(), gasUsed , 0, gasCost, Bytes.EMPTY, recipient),
-                    opcodes
-            );
+                    HederaEvmTransactionProcessingResult.successful(
+                            List.of(), gasUsed, 0, gasCost, Bytes.EMPTY, recipient),
+                    opcodes);
         }
 
         private static OpcodesProcessingResult unsuccessfulOpcodesProcessingResult(final OpcodeTracerOptions options) {
             final List<Opcode> opcodes = opcodes(options);
-            final long gasUsed = opcodes.stream().map(Opcode::gas).reduce(Long::sum).orElse(0L);
-            final long gasCost = opcodes.stream().map(Opcode::gasCost).reduce(Long::sum).orElse(0L);
+            final long gasUsed =
+                    opcodes.stream().map(Opcode::gas).reduce(Long::sum).orElse(0L);
+            final long gasCost =
+                    opcodes.stream().map(Opcode::gasCost).reduce(Long::sum).orElse(0L);
             return new OpcodesProcessingResult(
                     HederaEvmTransactionProcessingResult.failed(
-                            gasUsed, 0, gasCost, Optional.of(Bytes.EMPTY), Optional.of(ExceptionalHaltReason.PRECOMPILE_ERROR)),
-                    opcodes
-            );
+                            gasUsed,
+                            0,
+                            gasCost,
+                            Optional.of(Bytes.EMPTY),
+                            Optional.of(ExceptionalHaltReason.PRECOMPILE_ERROR)),
+                    opcodes);
         }
 
         private static List<Opcode> opcodes(final OpcodeTracerOptions options) {
@@ -613,62 +632,72 @@ class OpcodesControllerTest {
                             2731,
                             3,
                             2,
-                            options.isStack() ?
-                                    List.of(
-                                            Bytes.fromHexString("000000000000000000000000000000000000000000000000000000004700d305"),
-                                            Bytes.fromHexString("00000000000000000000000000000000000000000000000000000000000000a7")) :
-                                    Collections.emptyList(),
-                            options.isMemory() ?
-                                    List.of(
-                                            Bytes.fromHexString("4e487b7100000000000000000000000000000000000000000000000000000000"),
-                                            Bytes.fromHexString("0000001200000000000000000000000000000000000000000000000000000000")) :
-                                    Collections.emptyList(),
+                            options.isStack()
+                                    ? List.of(
+                                            Bytes.fromHexString(
+                                                    "000000000000000000000000000000000000000000000000000000004700d305"),
+                                            Bytes.fromHexString(
+                                                    "00000000000000000000000000000000000000000000000000000000000000a7"))
+                                    : Collections.emptyList(),
+                            options.isMemory()
+                                    ? List.of(
+                                            Bytes.fromHexString(
+                                                    "4e487b7100000000000000000000000000000000000000000000000000000000"),
+                                            Bytes.fromHexString(
+                                                    "0000001200000000000000000000000000000000000000000000000000000000"))
+                                    : Collections.emptyList(),
                             Collections.emptySortedMap(),
-                            null
-                    ),
+                            null),
                     new Opcode(
                             1275,
                             "REVERT",
                             2728,
                             0,
                             2,
-                            options.isStack() ?
-                                    List.of(
-                                            Bytes.fromHexString("000000000000000000000000000000000000000000000000000000004700d305"),
-                                            Bytes.fromHexString("00000000000000000000000000000000000000000000000000000000000000a7")) :
-                                    Collections.emptyList(),
-                            options.isMemory() ?
-                                    List.of(
-                                            Bytes.fromHexString("4e487b7100000000000000000000000000000000000000000000000000000000"),
-                                            Bytes.fromHexString("0000001200000000000000000000000000000000000000000000000000000000")) :
-                                    Collections.emptyList(),
+                            options.isStack()
+                                    ? List.of(
+                                            Bytes.fromHexString(
+                                                    "000000000000000000000000000000000000000000000000000000004700d305"),
+                                            Bytes.fromHexString(
+                                                    "00000000000000000000000000000000000000000000000000000000000000a7"))
+                                    : Collections.emptyList(),
+                            options.isMemory()
+                                    ? List.of(
+                                            Bytes.fromHexString(
+                                                    "4e487b7100000000000000000000000000000000000000000000000000000000"),
+                                            Bytes.fromHexString(
+                                                    "0000001200000000000000000000000000000000000000000000000000000000"))
+                                    : Collections.emptyList(),
                             Collections.emptySortedMap(),
-                            "0x4e487b710000000000000000000000000000000000000000000000000000000000000012"
-                    ),
+                            "0x4e487b710000000000000000000000000000000000000000000000000000000000000012"),
                     new Opcode(
                             682,
                             "SWAP2",
                             2776,
                             3,
                             1,
-                            options.isStack() ?
-                                    List.of(
-                                            Bytes.fromHexString("000000000000000000000000000000000000000000000000000000000135b7d0"),
-                                            Bytes.fromHexString("00000000000000000000000000000000000000000000000000000000000000a0")) :
-                                    Collections.emptyList(),
-                            options.isMemory() ?
-                                    List.of(
-                                            Bytes.fromHexString("0000000000000000000000000000000000000000000000000000000000000000"),
-                                            Bytes.fromHexString("0000000000000000000000000000000000000000000000000000000000000000")) :
-                                    Collections.emptyList(),
-                            options.isStorage() ?
-                                    ImmutableSortedMap.of(
-                                            Bytes.fromHexString("0000000000000000000000000000000000000000000000000000000000000000"),
-                                            Bytes.fromHexString("0000000000000000000000000000000000000000000000000000000000000014")) :
-                                    Collections.emptySortedMap(),
-                            null
-                    )
-            );
+                            options.isStack()
+                                    ? List.of(
+                                            Bytes.fromHexString(
+                                                    "000000000000000000000000000000000000000000000000000000000135b7d0"),
+                                            Bytes.fromHexString(
+                                                    "00000000000000000000000000000000000000000000000000000000000000a0"))
+                                    : Collections.emptyList(),
+                            options.isMemory()
+                                    ? List.of(
+                                            Bytes.fromHexString(
+                                                    "0000000000000000000000000000000000000000000000000000000000000000"),
+                                            Bytes.fromHexString(
+                                                    "0000000000000000000000000000000000000000000000000000000000000000"))
+                                    : Collections.emptyList(),
+                            options.isStorage()
+                                    ? ImmutableSortedMap.of(
+                                            Bytes.fromHexString(
+                                                    "0000000000000000000000000000000000000000000000000000000000000000"),
+                                            Bytes.fromHexString(
+                                                    "0000000000000000000000000000000000000000000000000000000000000014"))
+                                    : Collections.emptySortedMap(),
+                            null));
         }
     }
 
